Fixed spacing on About and Skills section.

--- a/src/components/about-section/AboutSection.module.css
+++ b/src/components/about-section/AboutSection.module.css
@@ -1,14 +1,42 @@
 .container {
 	padding: 0.5em;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
+	/* display: flex; */
+	/* flex-direction: column; */
+	/* justify-content: center; */
+	/* align-items: center; */
 
 	background-color: #0a192f;
 	color: grey;
 
-	font-size: 1.25rem;
+	/* font-size: 1rem; */
+}
+
+.aboutContainer {
+	/* display: flex; */
+	/* justify-content: flex-start; */
+	/* align-items: flex-start; */
+
+	border: 1px solid purple;
+}
+
+.descriptionContainer {
+	/* display: flex; */
+	/* flex-direction: column; */
+	/* justify-content: flex-start; */
+	/* align-items: flex-start; */
+	/* justify-items: flex-start;
+	align-content: flex-start; */
+
+	margin-top: 1.25em;
+	border: 1px solid red;
+}
+
+.aboutContainer,
+.pictureContainer {
+	max-width: 1800px;
+	margin: 1em 1em;
+	/* padding: auto 2em 5em 2em; */
+	/* padding-bottom: 5em; */
 }
 
 .aboutTitle {
@@ -17,20 +45,10 @@
 	color: white;
 }
 
-.aboutContainer,
 .pictureContainer {
-	max-width: 1800px;
-	margin: 1em 1em;
-	/* padding: auto 2em 5em 2em; */
-	padding-bottom: 5em;
-
-	/* border: 1px solid red; */
-}
-
-.pictureContainer {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
+	/* display: flex; */
+	/* flex-direction: column;
+	align-items: center; */
 
 	padding: 5em;
 }
@@ -43,6 +61,9 @@
 	.aboutContainer {
 		display: flex;
 		justify-content: center;
-		align-items: center;
+
+		font-size: 1.2rem;
+
+		/* align-items: center; */
 	}
 }
