--- a/src/components/skills-section/SkillsSection.module.css
+++ b/src/components/skills-section/SkillsSection.module.css
@@ -2,7 +2,7 @@
 	background-color: #0a192f;
 	color: white;
 	padding: 1em;
-	padding-bottom: 15em;
+	/* padding-bottom: 5em; */
 
 	/* display: flex; */
 	/* flex-direction: column; */
@@ -44,7 +44,7 @@
 .skillsTitle {
 	text-align: center;
 	margin-top: 3em;
-	margin-bottom: 3em;
+	/* margin-bottom: 3em; */
 }
 
 /* 
